--- a/css/main.scss
+++ b/css/main.scss
@@ -1,15 +1,24 @@
+/**
+    уже можно через css variables без проблем
+ */
 $primary-color: #2f80ed;
 $secondary-color: #333333;
 
+//font-family принято задавать на body - видимой части страницы
 html {
     
     font-family: 'Times New Roman', Times, serif;
 }
 
+//это плохая идея, правильно дать конкретному классу или body
+//что ты будешь использовать этот цвет как основной
 * {
     color: $secondary-color;
 }
 
+//идея задавать стили тегам, а не классам - плохая,
+//это первое место для рефакторинга в случае усложнения проекта,
+//есть даже целая методология БЭМ, включая в себя этот кейс в том числе
 h1 {
     color: $primary-color;
     margin-bottom: 0.25em;
@@ -30,6 +39,8 @@ a {
     color: $primary-color;
 }
 
+//вёрстка этого блока судя по всему сломана в браузере,
+//однако флексы там не нужны в любом случае
 .contact {
     display: flex;
     &__type {
@@ -44,6 +55,7 @@ a {
     margin-bottom: 2em;
     &__date {
         min-width: 185px;
+        //1px видимо
         margin-bottom: 1;
     }
     &__name {
